--- a/styles/style.css
+++ b/styles/style.css
@@ -24,3 +24,18 @@ button img{
     width: 100%;
     height: 100%;
 }
+.contact{
+    width: 80%;
+}
+.contact img{
+    width: 15%;
+    height: 15%;
+}
+@media screen and (max-width:576px){
+    .contact{
+        width: 100%;
+    }
+
+
+    
+}
